--- a/src/content/blog/2018-11-25-CSS题目系列（1）-可滚动的Table.md
+++ b/src/content/blog/2018-11-25-CSS题目系列（1）-可滚动的Table.md
@@ -51,7 +51,7 @@ table tbody {
 
 这时候，表身已经实现了滚动，但是有个问题，`td`缩在了一堆，如下：
 
-![](https://gd4ark-1258805822.cos.ap-guangzhou.myqcloud.com/images/006mS5wEgy1fxkejbopq1j30e907c0sp.jpg)
+![alt text](../../assets/images/image.png)
 
 加上这个就好了：
 
@@ -64,9 +64,6 @@ tbody tr {
 }
 ```
 
-![](https://gd4ark-1258805822.cos.ap-guangzhou.myqcloud.com/images/006mS5wEgy1fxkejbopq1j30e907c0sp.jpg)
-
-完整代码：https://github.com/gd4Ark/blog-demos/blob/master/2018-11-25/01.html
 
 ## 后记
 
