--- a/src/content/blog/2018-11-26-CSS题目系列（3）-实现文字切割效果.md
+++ b/src/content/blog/2018-11-26-CSS题目系列（3）-实现文字切割效果.md
@@ -61,7 +61,7 @@ h1::after {
 
 这时候的效果是这样的，所以我们要把剩余部分的文字进行底部对齐。
 
-![](https://gd4ark-1258805822.cos.ap-guangzhou.myqcloud.com/images/006mS5wEgy1fxlfhxdtoyj30xa0h474y.jpg)
+![alt text](../../assets/images/image1.png)
 
 这里使用`flex`布局对齐，剩余部分改为：
 
@@ -74,10 +74,6 @@ h1::after {
   align-items: flex-end;
 }
 ```
-
-这时候：
-
-![](https://gd4ark-1258805822.cos.ap-guangzhou.myqcloud.com/images/006mS5wEgy1fxlfobhqnbj30wj0eyaap.jpg)
 
 到现在，就已经做好，只要在切割部分上应用动画，即可实现炫酷的切割效果：
 
@@ -101,8 +97,6 @@ h1::before {
   }
 }
 ```
-
-完整代码：https://github.com/gd4Ark/blog-demos/blob/master/2018-11-26/01.html
 
 ## 后记
 
