--- a/src/content/blog/2018-11-26-CSS题目系列（4）-文字穿透遮罩层.md
+++ b/src/content/blog/2018-11-26-CSS题目系列（4）-文字穿透遮罩层.md
@@ -13,7 +13,7 @@ pubDatetime: 2018-11-26 22:58:06
 
 效果就是这样的：
 
-![](https://gd4ark-1258805822.cos.ap-guangzhou.myqcloud.com/images/006mS5wEgy1fxlh53ze9sj31es0lmq6s.jpg)
+![alt text](../../assets/images/image3.png)
 
 这个效果的难点在于，如何让文字穿透过遮罩层，但是这样好像很难。
 
@@ -55,7 +55,7 @@ pubDatetime: 2018-11-26 22:58:06
 ```css
 .container,
 h1 {
-  background: url('https://gd4ark.github.io/CSS-Carousel/image/2.jpg');
+  background: url('xxx.jpg');
   background-size: 100% 100%;
 }
 .container h1,
@@ -81,10 +81,6 @@ h1 {
   -webkit-background-clip: text;
 }
 ```
-
-在线查看，可以修改文字哦： [链接](https://gd4ark.github.io/blog_demos/2018-11-26/02.html)
-
-完整代码：[链接](https://github.com/gd4Ark/blog_demos/blob/master/2018-11-26/02.html)
 
 ## 后记
 
